fix(overflow): fix that annoying main overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,6 @@ body,
 main,
 body > * {
   height: 100%;
-  overflow-y: auto;
 }
 
 .invis {
